# Collect-Deliver-SoS

./: .gitignore  IP_Nav.sh  README.md  asset_sdf_launcher.sh  check_running.sh  ip_nav_pp_loc.sh  kill_roslaunch_this_terminal.sh  killall.sh  pioneer_multi_control.sh  pioneer_spawn_control.sh  result_test2.out  run.sh  test.sh  test1.test  test2.test
ForkLiftActuator/: CMakeLists.txt  package.xml
ForkLiftActuator/launch/: ForkLiftActuator.launch
ForkLiftActuator/src/: ForkLiftActuator.cpp  ForkLiftActuator.h
doc/: IC - notes.notes  index.tex  realtorio_parcial.tex
doc/RA-1/: application_characterization.tex
doc/RA-2/: capability_identification.tex
doc/RA-3/: robotic_architecture_modeling.tex
doc/RA-4/: robotic_architecture_detailing.tex
doc/rel/: comandos.tex  principal.tex  referencias.bib
manual_navigation/: CMakeLists.txt  package.xml
manual_navigation/launch/: operation_l.launch
manual_navigation/src/: operation.cpp
pioneer_control/: CMakeLists.txt  package.xml
pioneer_control/action/: ControlGoDeliverProduct.action  ControlGoPickUpProduct.action  NavigationDriveTo.action  NavigationExecutePath.action  ObjectManipulationRelease.action
pioneer_control/config/: pioneer_control.yaml
pioneer_control/include/pioneer_control/: AStar.h  DriveActuatorAPI.h  Vec2.h  aStar.h  forklift_actuator.h  image_processing.h
pioneer_control/launch/: forklift_actuator.launch  generic_ns_launcher.launch  grid_poses.yaml  image_processing.launch  pioneer_control.launch  pioneer_control_full.launch  robotic_agent_full.launch
pioneer_control/msg/: ChooseClosestMsg.msg  PAInformation.msg  PoseGrid.msg  RangeArray.msg  TransportDone.msg  TransportRequest.msg  UpdateMapMsg.msg
pioneer_control/src/: application.cpp  control.cpp  forklift_actuator.cpp  image_processing.cpp  localization.cpp  map_information.cpp  navigation.cpp  object_manipulation.cpp  path_planning.cpp  product_manager.cpp  robotic_agent.cpp  sonar_sensor.cpp
pioneer_control/srv/: ForkliftLift.srv  ForkliftLower.srv  GetLocalization.srv  LocalizationInit.srv  MapInformationGetMap.srv  MapInformationGetProductAreas.srv  MapInformationUpdateMap.srv  PathPlanningCalculateDistance.srv  PathPlanningDefinePath.srv  ProductManagerAddRequest.srv  SonarSensorGetInformation.srv
pioneer_description/launch/: generic_pioneer.launch  one_pioneer.launch  pioneer_poses.yaml  pioneers.launch  robot_description.launch
pioneer_description/urdf/: pioneer.gazebo  pioneer3dx_mod.xacro  pioneer3dx_multi.xacro  pioneer_multi.gazebo
pioneer_gazebo/config/: pioneer_control.yaml
pioneer_gazebo/launch/: pioneer_empty.launch  world.launch
pioneer_ros/launch/: pioneer_ros.launch
pioneer_ros/src/: pioneer_odom_publisher.cpp  pioneer_pid_controller.cpp  pioneer_tf_broadcaster.cpp
stage_assets/: CMakeLists.txt  package.xml
stage_assets/assets/: 5by5_out.sdf  product.xacro  shop_floor_tape.sdf
stage_assets/launch/: generic_sdf_launcher.launch  product.launch  product_description.launch  product_poses.yaml  shop_floor_tape.launch  shop_floot_tape_sdf.launch
